[package]
name = "rustcord"
version = "0.1.0"
authors = ["Ilhan Yavuz Iskurt <ilhanyavuz.02@hotmail.com>"]
edition = "2021"
description = "Cli discord written in Rust"
readme = "README.md"
repository = "https://github.com/ilhaniskurt/rustcord/"
license = "MIT License"
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "cord"
path = "src/main.rs"

[dependencies]
termion = "2.0.1"
